--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [workspace]
 members = [
-    "cli",
-    "clients/rust/ncn_program",
-    "core",
-    "integration_tests",
-    "program",
-    "shank_cli",
+  "cli",
+  "clients/rust/ncn_program",
+  "core",
+  "integration_tests",
+  "program",
+  "shank_cli",
 ]
 
 resolver = "2"
@@ -115,6 +115,17 @@ switchboard-on-demand = "0.3.4"
 syn = "2.0.72"
 thiserror = "1.0.57"
 tokio = { version = "1.36.0", features = ["full"] }
+solana-bn254 = "2.2.2"
+num = "0.4.3"
+dashu = "0.4.2"
+solana-nostd-sha256 = "0.1.3"
+sha2 = "0.10.9"
+ark-bn254 = { version = "0.5.0" }
+ark-ec = { version = "0.5.0" }
+ark-ff = { version = "0.5.0" }
+ark-serialize = { version = "0.5.0" }
+ark-std = "0.5.0"
+
 
 [profile.release]
 overflow-checks = true
