--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -26,6 +26,20 @@ spl-associated-token-account = { workspace = true }
 spl-math = { workspace = true }
 spl-token = { workspace = true }
 thiserror = { workspace = true }
+solana-bn254 = { workspace = true }
+num = { workspace = true }
+dashu = { workspace = true }
+solana-nostd-sha256 = { workspace = true }
+sha2 = { workspace = true }
+
+# For client-side BN254 operations
+[target.'cfg(not(target_os = "solana"))'.dependencies]
+ark-bn254 = { workspace = true }
+ark-ec = { workspace = true }
+ark-ff = { workspace = true }
+ark-serialize = { workspace = true }
+rand = { workspace = true }
 
 [dev-dependencies]
 assert_matches = { workspace = true }
+hex = { workspace = true }
