--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -44,6 +44,11 @@ solana-security-txt = { workspace = true }
 spl-associated-token-account = { workspace = true }
 spl-token = { workspace = true }
 thiserror = { workspace = true }
+solana-bn254 = { workspace = true }
+num = { workspace = true }
+dashu = { workspace = true }
+solana-nostd-sha256 = { workspace = true }
+sha2 = { workspace = true }
 
 [dev-dependencies]
 assert_matches = { workspace = true }
