Revert "remove cli"
This reverts commit 93b92706d23b419f7a733656071a035897b911a9.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = [
+  "cli",
   "clients/rust/ncn_program",
   "core",
   "integration_tests",
@@ -49,6 +50,7 @@ jito-vault-sdk = { package = "jito-vault-sdk", git = "https://github.com/jito-fo
 log = "0.4.22"
 ncn-program = { path = "./program", version = "=0.0.1" }
 ncn-program-client = { path = "./clients/rust/ncn_program", version = "0.0.1" }
+ncn-program-cli = { path = "./cli", version = "0.0.1" }
 ncn-program-core = { path = "./core", version = "=0.0.1" }
 ncn-program-shank-cli = { path = "./shank_cli", version = "=0.0.1" }
 num-derive = "0.4.2"
