--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -21,6 +21,7 @@ clap = { workspace = true }
 clap-markdown = { workspace = true }
 dotenv = { workspace = true }
 env_logger = { workspace = true }
+hex = "0.4"
 jito-bytemuck = { workspace = true }
 jito-jsm-core = { workspace = true }
 jito-restaking-core = { workspace = true }
@@ -32,8 +33,11 @@ log = { workspace = true }
 ncn-program = { workspace = true }
 ncn-program-client = { workspace = true }
 ncn-program-core = { workspace = true }
+rand = { workspace = true }
 reqwest = { version = "0.12.4", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde_with = { version = "3.0", features = ["hex"] }
 solana-account-decoder = { workspace = true }
 solana-client = { workspace = true }
 solana-metrics = { workspace = true }
@@ -44,3 +48,4 @@ tokio = { workspace = true }
 
 [dev-dependencies]
 assert_matches = { workspace = true }
+tempfile = "3.8"
