--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -35,6 +35,7 @@ jito-vault-program = { workspace = true }
 ncn-program-core = { workspace = true }
 solana-program = { workspace = true }
 solana-security-txt = { workspace = true }
+num = { workspace = true }
 
 [dev-dependencies]
 assert_matches = { workspace = true }
