add commonware-avs-router-solana as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "local-test-validator"]
 	path = local-test-validator
 	url = git@github.com:Unboxed-Software/jito-restaking-test-validator.git
+[submodule "commonware-avs-router-solana"]
+	path = commonware-avs-router-solana
+	url = git@github.com:Unboxed-Software/commonware-avs-router-solana.git
